# MedCAT

./: .behaverc  CONTRIBUTING.md  pyproject.toml  requirements-dev.txt  user-stories.md
.claude/rules/: 01-tech-stack-and-gates.md  02-test-first-grain.md  03-backwards-compatibility.md  04-deprecate-dont-delete.md  05-one-file-per-user-story.md  06-distinct-example-data.md  07-anchor-review-comments.md  08-change-workflow.md  README.md
.github/workflows/: main.yml  production.yml
features/: README.md  environment.py  us-01-building-concept-database-from-csv.feature  us-01-ner-and-linking.feature  us-09-structured-annotation-output.feature
features/steps/: annotation_output_steps.py  cdb_from_csv_steps.py  ner_linking_steps.py
medcat/: cdb_maker.py
medcat/utils/saving/: envsnapshot.py
tests/: test_us01_building_cdb_from_csv.py
user-stories/: us-01-building-concept-database-from-csv.md  us-01-ner-plus-linking-to-ontologies.md  us-02-building-concept-database-from-csv.md  us-02-building-from-raw-ontology-releases.md  us-03-building-vocabulary-with-embeddings.md  us-03-unsupervised-training.md  us-04-normalising-and-spell-correcting-tokens.md  us-04-supervised-training.md  us-05-detecting-candidate-concept-mentions.md  us-05-meta-annotation-classification.md  us-06-disambiguating-a-mention-by-context.md  us-06-relation-extraction.md  us-07-deidentification.md  us-07-resolving-overlapping-detections.md  us-08-model-pack-packaging.md  us-08-restricting-linking-to-concept-subset.md  us-09-multiprocessing-annotation.md  us-09-structured-annotation-output.md  us-10-regression-testing.md  us-10-unsupervised-training.md  us-11-incremental-model-correction.md  us-11-supervised-training.md  us-12-building-from-raw-ontology-releases.md  us-12-incremental-model-correction.md  us-13-meta-annotation-classification.md  us-13-model-evaluation-kfold.md  us-14-relation-extraction.md  us-14-usage-monitoring.md  us-15-transformer-ner.md  us-16-deidentification.md  us-17-multiprocessing-annotation.md  us-18-model-pack-packaging.md  us-19-measuring-performance-against-gold-standard.md  us-20-model-evaluation-kfold.md  us-21-regression-testing.md  us-22-fitting-large-cdb-into-memory.md  us-23-merging-concept-databases.md  us-24-usage-monitoring.md
